# ESG-Metrics-Extractor

./: .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  LOGIC_VERIFICATION.md  README.md  __init__.py  config.py  pyproject.toml  quality_analysis_comparison.py  requirements.txt  run_pipeline.py  test_analyse_e2e.py  test_analyse_improved.py  test_api_connection.py  test_convert_module.py  test_extract_improved.py  test_extract_real_pdf.py  test_integrate_module.py  test_quick.py
analyse/: MIGRATION_GUIDE.md  MODULARIZATION_SUMMARY.md  README.md  __init__.py
analyse/chunking/: __init__.py  adaptive_chunker.py  base_chunker.py
analyse/core/: __init__.py  base.py  config.py  models.py
analyse/merging/: __init__.py  base_merger.py  category_merger.py  duplicate_detector.py  esg_merger.py  section_merger.py
analyse/pipeline/: __init__.py  esg_analyzer.py
analyse/processors/: __init__.py  base_processor.py  direct_processor.py  llm_processor.py  parallel_processor.py
analyse/prompts/: __init__.py  base_prompt.py  comprehensive_prompt.py  environmental_prompt.py  governance_prompt.py  simple_prompt.py  social_prompt.py
analyse/tests/: test_modularized_analyze.py  test_structure_only.py
analyse/utils/: __init__.py
analyse/validation/: __init__.py  base_validator.py  content_validator.py  metric_validator.py  quality_validator.py  structure_validator.py
convert/: __init__.py
convert/cleaning/: __init__.py  value_cleaner.py
dashboard/: README.md  app.py  comprehensive_conversion_results.json  dynamic_comparison_analyzer.py  final_comprehensive_esg_fact_sheet_20250731_120158.xlsx  requirements.txt
extract/: README.md  __init__.py
integrate/: __init__.py
reports-core-scripts-reference/: README.md
(+69 files in other folders)
